# wise-mem

./: .env.example  .gitignore  CLAUDE.md  README.md  compose.yaml  justfile  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1e0a06814aae_initial_schema.py  86c8504cd071_add_projects_and_memory_project_links.py
docker/postgres/init/: 01-init.sql
docs/: roadmap.md
docs/adr/: 0001-postgres-source-of-truth-memgraph-derived-graph.md
docs/handoffs/: entity-slice.md
scripts/: check_api.py  check_cli.py  check_db.py  check_hybrid.py  check_projects.py  check_reembed.py
src/wise_mem/: __init__.py  api.py
tests/: README.md  conftest.py  test_api.py  test_cli.py  test_memories.py  test_projects.py  test_search.py  test_service.py
wise_mem/: __init__.py  api.py  cli.py  config.py  crud.py  db.py  embeddings.py  models.py  service.py
