[project]
name = "wise-mem"
version = "0.1.0"
description = "A local memory and context store for agents"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.138.2",
    "loguru==0.7.3",
    "pydantic==2.13.4",
    "typer==0.26.8",
]

[project.scripts]
wise-mem = "wise_mem:main"

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "pytest==9.1.1",
]
