[project]
name = "wise-mem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi[all]>=0.138.2",
    "loguru>=0.7.3",
    "pgvector>=0.4.2",
    "pydantic-settings>=2.14.2",
    "sqlmodel>=0.0.39",
    "typer[all]>=0.26.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wise_mem"]
